waiter app complete now for testing

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nodemon": "^1.18.4",
     "nyc": "^13.0.1",
     "pg": "^7.4.3",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "travis": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^5.6.1",
