--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
 
 before_script:
   - psql -c 'create database waiter-app;' -U postgres
-  - psql -U postgres -d waiter-app -a -f ./script/database.sql
+  - psql -U postgres -d waiter-app -a -f ./scripts/database.sql
   
 addons:
     apt:
