--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "directories": {
-    "test": "mocha test"
+    "test": "test"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
