--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ node_js:
   - "v5.6.0"
 
 before_script:
-  - psql -c 'create database "waiter-app";' -U postgres
-  - psql -U postgres -d "waiter-app" -a -f ./scripts/database.sql
-  - psql -U postgres -d "waiter-app" -a -f ./scripts/insert_days.sql
+  - psql -c 'create database waiter-app;' -U postgres
+  - psql -U postgres -d waiter-app -a -f ./scripts/database.sql
+  - psql -U postgres -d waiter-app -a -f ./scripts/insert_days.sql
   
 addons:
     apt:
